.NET Framework 베이스 이미지 변경

--- a/src/DotNetFramework4/Dockerfile
+++ b/src/DotNetFramework4/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/windows/servercore:1909
+﻿FROM mcr.microsoft.com/dotnet/framework/runtime:4.8-windowsservercore-1909
 ENV WAIT_SECONDS 10
 
 USER ContainerAdministrator
