파이썬 윈도우 서버 이미지에 대한 제한 사항 안내 추가

--- a/src/Python/Dockerfile
+++ b/src/Python/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3.8-windowsservercore-1809
+# 공식 이미지는 LTSC만 지원됩니다. (예: python:3.8-windowsservercore-1809)
+# SAC 버전은 rkttu/python-nanoserver Docker Hub 리포지터리를 참고해주세요.
+
+FROM rkttu/python-nanoserver:3.8.6_1909
 WORKDIR /app
 
 COPY main.py .
